--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,8 +40,8 @@
 
         {% include projects.html %}
 
-        {% if site.topics %}
-          {% include interests.html %}
+        {% if site.publications %}
+          {% include publications.html %}
         {% endif %}
 
         {% unless posts_total == 0 %}
